--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,14 +7,16 @@
     tools:context=".fragments.HomeFragment">
 
 
-
     <androidx.recyclerview.widget.RecyclerView
+        android:padding="4dp"
+        android:clipToPadding="false"
         android:id="@+id/recycler_characters"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView">
+        app:layout_constraintTop_toBottomOf="@id/textView"
+        tools:listitem="@layout/character_item">
 
     </androidx.recyclerview.widget.RecyclerView>
 
@@ -34,7 +36,9 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="Marvel Characters"
+        android:textSize="24sp"
+        android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
