--- a/app/src/main/res/layout/character_item.xml
+++ b/app/src/main/res/layout/character_item.xml
@@ -23,7 +23,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@tools:sample/avatars" />
+            tools:srcCompat="@tools:sample/avatars"
+            android:contentDescription="@string/character_image" />
 
         <TextView
             android:id="@+id/txt_character_name"
@@ -31,7 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:text="TextView"
+            android:text="@string/character_name"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="14sp"
@@ -51,7 +52,7 @@
             android:layout_marginBottom="8dp"
             android:ellipsize="end"
             android:textSize="12sp"
-            android:text="More Details "
+            android:text="@string/more_details"
             app:layout_constraintBottom_toTopOf="@+id/textView2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/img_character_thumbnail"
@@ -62,16 +63,14 @@
             android:id="@+id/textView2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:drawableEnd="@drawable/ic_baseline_arrow_right_24"
-            android:text="More Details"
-
-
+            android:text="@string/more_details"
             android:drawablePadding="4dp"
             android:textAlignment="textEnd"
             app:layout_constraintBottom_toBottomOf="@+id/img_character_thumbnail"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/img_character_thumbnail" />
+            app:layout_constraintStart_toEndOf="@+id/img_character_thumbnail"
+            app:drawableEndCompat="@drawable/ic_baseline_arrow_right_24" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
