--- a/app/src/main/res/layout/fragment_character_details.xml
+++ b/app/src/main/res/layout/fragment_character_details.xml
@@ -21,7 +21,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:src="@tools:sample/avatars" />
+            tools:src="@tools:sample/avatars"
+            android:contentDescription="@string/character_image" />
 
         <TextView
             android:id="@+id/textView3"
@@ -30,7 +31,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/akaya_telivigala"
-            android:text="TextView"
+            android:text="@string/character_name"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="Description:"
+            android:text="@string/description"
             android:fontFamily="@font/akaya_telivigala"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -53,7 +54,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="TextView"
+            android:text="@string/description"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="Comics:"
+            android:text="@string/comics"
             android:fontFamily="@font/akaya_telivigala"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -76,7 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="Series:"
+            android:text="@string/stories"
             android:fontFamily="@font/akaya_telivigala"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -88,7 +89,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="Stories:"
+            android:text="@string/stories"
             android:fontFamily="@font/akaya_telivigala"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -105,7 +106,8 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView6" />
+            app:layout_constraintTop_toBottomOf="@+id/textView6"
+            tools:ignore="NestedScrolling" />
 
         <ListView
             android:nestedScrollingEnabled="true"
@@ -116,7 +118,8 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textView7" />
+            app:layout_constraintTop_toBottomOf="@id/textView7"
+            tools:ignore="NestedScrolling" />
 
         <ListView
             android:nestedScrollingEnabled="true"
@@ -127,7 +130,8 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textView8" />
+            app:layout_constraintTop_toBottomOf="@id/textView8"
+            tools:ignore="NestedScrolling" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
