--- a/app/src/main/res/menu-v26/my_navigation_items.xml
+++ b/app/src/main/res/menu-v26/my_navigation_items.xml
@@ -2,6 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/action_home"
         android:title="@string/home"
+        android:iconTint="@android:color/transparent"
         android:icon="@drawable/marvel" />
     <item android:id="@+id/action_comics"
         android:title="@string/comics"
